# aylp_basler_fgsdk

./: README.md  aylp_basler_fgsdk.c  aylp_basler_fgsdk.h  meson.build
contrib/: conf_centroid.json  conf_centroid_profile.json  conf_test.json
